<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="20dp"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/detail"
            android:textStyle="bold"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/text_Title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_detail"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:textSize="18sp"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Title"
        android:id="@+id/edit_Title"
        android:hint="@string/title"
        android:paddingLeft="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/underline_background"
        />
    <TextView
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contents"
        android:id="@+id/text_Contents"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@id/edit_Title"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Contents"
        android:id="@+id/edit_Contents"
        android:paddingTop="20dp"
        android:hint="@string/contents"
        android:paddingLeft="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/underline_background"
        />
    <TextView
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:id="@+id/text_Tag"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@id/edit_Contents"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Tag"
        android:id="@+id/edit_Tag"
        android:paddingTop="20dp"
        android:hint="@string/tag"
        android:paddingLeft="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/underline_background"
        />
    <TextView
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parent"
        android:id="@+id/text_Parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@id/edit_Tag"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Parent"
        android:id="@+id/edit_Parent"
        android:paddingTop="20dp"
        android:hint="@string/parent"
        android:paddingLeft="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/underline_background"
        />

    <Button
        android:id="@+id/btn_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_button"
        android:onClick="onUrlButtonClicked"
        android:text="@string/url_btn"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Parent" />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_button"
        android:onClick="onEditButtonClicked"
        android:text="@string/edit"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_url" />
</androidx.constraintlayout.widget.ConstraintLayout>