<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="20dp"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/category_edit"
            android:textStyle="bold"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_detail"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textSize="17dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parent"
                android:id="@+id/textTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/toolbar_detail"
                android:textColor="@color/colorPrimary"/>
            <EditText
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitle"
                android:id="@+id/editTitle"
                android:hint="@string/parent"
                android:paddingLeft="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

            <Button
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTitle"
                android:id="@+id/btn_reg"
                android:onClick="btnReg_onClick"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/reg"
                android:textColor="#FFFFFF"
                android:background="@drawable/rounded_button"
                />

        </LinearLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>